<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:soundEffectsEnabled="true">
		
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="62dp"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:gravity="center_vertical|center_horizontal"
		        android:text="@string/app_name" />
		
		    <ImageView
		        android:id="@+id/ewsIcon"
		        android:layout_width="match_parent"
		        android:layout_height="190dp"
		        android:src="@drawable/ic_launcher" />
		
		    <Button
		        android:id="@+id/toggleMonitoring"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/start_monitoring" />
		
		    <Button
		        android:id="@+id/showStatistics"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/show_statistics" />
		
		    <Button
		        android:id="@+id/measureConnection"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:onClick="goToMeasureConnection"
		        android:text="@string/measure_connection" />
		
		    <Button
		        android:id="@+id/settings"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/settings" />
		
		</LinearLayout>
</ScrollView>